chore: implementar hud